--- a/task.css
+++ b/task.css
@@ -1,3 +1,52 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .heading {
     background-color: aqua;
+    height: 1000px;
+    width: 1000px;
+}
+
+.container1 {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    margin: 30px;
+    padding: 10px;
+    height: 38vh;
+    width: 60vw;
+    border-radius: 10px;
+}
+
+.content {
+    align-self: flex-start;
+    text-align: center;
+    width: 50vw;
+}
+
+.container2 {
+    background-color: white;
+    display: flex;
+    margin: 30px;
+    padding: 10px;
+    height: 38vh;
+    width: 60vw;
+    border-radius: 10px;
+}
+
+.container3 {
+    background-color: white;
+    display: flex;
+    margin: 30px;
+    padding: 10px;
+    height: 38vh;
+    width: 60vw;
+    border-radius: 10px;
+}
+
+p {
+    font-size: 20px;
 }
